# lightgbm_embedding

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
lightgbm_embedding/: __init__.py
tests/: test_lightgbm_embedding.py
