[tool.poetry]
name = "lightgbm_embedding"
version = "0.1.0"
description = "Feature embeddings with LightGBM"
authors = ["Atilla Karaahmetoğly"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.0"
scikit-learn = "^1.0.0"
lightgbm = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
