[tool.poetry]
name = "lightgbm_embedding"
version = "0.1.0"
description = "Feature embeddings with LightGBM"
authors = ["Atilla Karaahmetoğlu <atilla.karaahmetoglu@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["nlp", "turkish"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.0"
scikit-learn = "^1.0.0"
lightgbm = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
